[package]
name = "yason"
version = "0.0.1"
authors = ["David Li <davidli2010@foxmail.com>", "linbo <linbo.lin@qq.com>"]
edition = "2021"
rust-version = "1.57"
readme = "README.md"
license = "Apache-2.0"
description = "Encoding and decoding support for YASON in Rust"
keywords = ["yashandb", "yason", "json", "binary"]
repository = "https://github.com/cod-technologies/yason.git"
homepage = "https://github.com/cod-technologies/yason"
documentation = "https://docs.rs/yason/"

[dependencies]
decimal-rs = "0.1.34"
serde_json = {version = "1.0.79", features = ["arbitrary_precision"]}
serde = { version = "1.0.136", optional = true }

[dev-dependencies]
bencher = "0.1.5"
bincode = "1.3.3"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]